[package]
name = "lfs_addon_wheel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
colored = "2.0.0"
structure = "0.1"
#gtk = { version = "0.6.4", package = "gtk4"  }
log = { version = "0.4.17", features = ["max_level_debug"]}
load-dotenv = "0.1.2"
serialport = "4.2.0" 
unicode-segmentation = "1.6.0"
